NetworkPolicies/workshop/middleware-netpol-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: middleware-network-policy-ingress
  namespace: middleware
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: middleware
    ports:
    - protocol: TCP
      port: 80
  - from:
    - namespaceSelector:
        matchLabels:
          tier: web
    ports:
    - protocol: TCP
      port: 80
