NetworkPolicies/workshop/web-netpol-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-network-policy-ingress
  namespace: web
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
#    - {}
  - from:
    - namespaceSelector:
        matchLabels:
          tier: web
    ports:
    - protocol: TCP
      port: 80
  - from:
    - ipBlock:
        cidr: 10.0.0.0/24
